feat: 增加牛客算法|jvm参数调优